Fixed location and contact burger on narrow screens 300-359px by adding padding left direction

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -523,6 +523,16 @@
 
 }
 
+/* Narrow Phone */
+@media only screen and (min-width: 300px) and (max-width: 359px) {
+
+    .revealed {
+        padding-left: 20px;
+    }
+    
+}
+
+
 /* Landscape Phone */
 @media only screen and (min-width: 30em) and (max-width: 47.9375em) {
 
